--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.clarin.sru</groupId>
     <artifactId>FCSEndpointTester</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>war</packaging>
     <name>Tester for CLARIN-FCS</name>
     <description>A test-service to test CLARIN-FCS endpoints for protocol conformance</description>
@@ -21,10 +21,10 @@
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
         <!-- dependencies -->
-        <slf4j.version>1.7.21</slf4j.version>
-        <httpClient.version>4.5.2</httpClient.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <httpClient.version>4.5.4</httpClient.version>
         <!-- Vaadin dependencies -->
-        <vaadin.version>7.7.3</vaadin.version>
+        <vaadin.version>7.7.13</vaadin.version>
     </properties>
 
     <dependencies>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>eu.clarin.sru.fcs</groupId>
             <artifactId>fcs-simple-client</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
 
         <!-- 
