- move updated goals also to m2e lifecycle helper

--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,7 @@
                                         </versionRange>
                                         <goals>
                                             <goal>resources</goal>
+                                            <goal>update-widgetset</goal>
                                             <goal>compile</goal>
                                         </goals>
                                     </pluginExecutionFilter>
